<resources>
    <string name="app_name">Lab 5</string>
    <string name="description_label">Description</string>
    <string name="comment_label">Comment</string>
    <string name="name">Name</string>
    <string name="user">Last edited by</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="save">Save</string>
    <string name="newRev">Add a review</string>
    <string name="clear">Clear reviews</string>
    <string name="more">More info</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="repeat">Repeat password</string>
</resources>
